<resources>
    <string name="app_name">Cafe Managment</string>
    <string name="drink">Drink</string>
    <string name="toppings">Toppings</string>
    <string name="t_quantity">Quantity</string>
    <string name="dec">-</string>
    <string name="t_zero">0</string>
    <string name="inc">+</string>
    <string name="t_price">Price</string>
    <string name="t_zerop">0</string>
    <string name="t_Calc">Calculate</string>
    <string name="t_order">Order</string>
    <string name="t_bill">Bill</string>
</resources>
