<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context=".Activities.CustomerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="6dp"
        android:orientation="vertical"
        android:clickable="true"
        android:focusableInTouchMode="true">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ed_name"
            android:hint="Name"
            android:textAlignment="center"
            android:backgroundTint="@android:color/white"
            android:layout_marginBottom="5dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/ed_table_number"
            android:textAlignment="center"
            android:hint="Table Number"
            android:backgroundTint="@android:color/white"
            android:inputType="number"
            android:maxLength="2"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drink"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="#001251"
            android:textAllCaps="true"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/spinner"
            android:contextClickable="true"
            android:background="@drawable/spinnerbg">

        </Spinner>

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_quantity"
            android:paddingTop="5dp"
            android:textColor="#001251"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="true"/>
        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">
            <Button
                android:id="@+id/btn_dec"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/dec"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_quantity"
                android:text="@string/t_zero"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                />
            <Button
                android:id="@+id/btn_inc"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/inc" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:text="@string/t_bill"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="#001251"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:textStyle="bold"/>
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_bill"
            android:text="@string/t_zerop"
            android:textColor="#FFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_calc"
                android:text="@string/t_Calc" android:layout_weight="1"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_order"
                android:text="@string/t_order"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>